Fix 2765: prevent gap from making space-evenly look non-even (#2766)
* Prevent gap making space-evenly look weird

* Also adjust similar examples

--- a/live-examples/css-examples/box-alignment/place-content.css
+++ b/live-examples/css-examples/box-alignment/place-content.css
@@ -3,7 +3,6 @@
   display: grid;
   grid-template-columns: 60px 60px;
   grid-auto-rows: 40px;
-  grid-gap: 10px;
   height: 180px;
   width: 220px;
 }
